--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Our Partners</title>
 </head>
 <body>
-  <h1>Welcome to Our Partners Page</h1>
+  <h1>Welcome to Our Partners Site</h1>
   <p>More content coming soon...</p>
 </body>
 </html>
